[fix] missing margin between wrapping button lines. Fix #201

--- a/app/assets/stylesheets/main_site.scss
+++ b/app/assets/stylesheets/main_site.scss
@@ -75,3 +75,7 @@ button.close {
   // height: 32px;
   z-index: 100;
 }
+
+#contact {
+  a { margin-bottom: 0.3rem; }
+}
